fixed modal overflow behavior

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -3,12 +3,19 @@
   top: 10vh;
   left: 5%;
   width: 90%;
+  max-height: 80vh;
+  overflow-y: scroll;
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__backdrop {
     position: fixed;
